CSS_advanced/styles/32-style.css
/* ... */
.button:hover {
  color: var(--button-hover-color);
  text-decoration: var(--button-hover-text-decoration);
  background-color: var(--button-hover-background);
  transition-duration: var(--transition-duration);
  transition-property: color, background-color;
}

[data-section-theme="dark"] {
  --button-color: var(--color-white);
}

/* Add border radius to images */
.card-testimonial {
  text-align: center;
}

.card-testimonial .card-avatar {
  border-radius: 50%;
  width: 10rem;
  height: 10rem;
}

.card-testimonial .card-quote cite {
  display: block;
  padding-top: 1rem;
  color: var(--color-primary);
}

/* Styling the section hero */
.section-hero {
  background-size: 90rem auto;
}

.section-hero .section-title {
  margin-bottom: 5rem;
}

.section-hero .section-inner {
  padding: 10rem 40rem 2rem 0;
}

/* Fixing the header and menu navigation bar */
.header {
  padding: var(--header-padding);
}

.header-logo {
  position: var(--header-logo-position);
}

.header-logo a {
  display: var(--header-logo-link-display);
  position: var(--header-logo-link-position);
  top: var(--header-logo-link-top);
  left: var(--header-logo-link-left);
}

/* Fix the works section */
.card-work .card-outer {
  position: relative;
  overflow: hidden;
}

.card-work .card-image {
  height: 30rem;
  width: 100%;
  object-fit: cover;
  vertical-align: bottom;
}

.card-work:hover .card-image {
  transform: scale(1.2);
  transition: var(--transition-duration) var(--transition-cubic-bezier);
}

.card-work .card-inner {
  position: absolute;
  top: -0.1rem;
  left: -0.1rem;
  right: -0.1rem;
  z-index: 1;
  transition: var(--transition-duration) var(--transition-cubic-bezier);
}

.card-work:hover .card-inner {
  background-color: rgba(0, 0, 0, 0.7);
}

.card-work:hover .card-outer {
  transform: scale(0.95);
}

.card-work .card-title {
  text-align: center;
  margin: 0;
  opacity: 0.3;
  height: 100%;
  position: relative;
}

.card-work .card-title a {
  display: block;
  text-decoration: none;
  padding-top: 45%;
}

.card-work .card-title a::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

.card-work:hover .card-title {
  opacity: 1;
}

/* Add quotes decoration on testimonials */
.card-testimonial .card-quote {
  position: relative;
}

.card-testimonial .card-quote::before {
  content: "\201C";
  position: absolute;
  top: -4.5rem;
  left: -1rem;
  color: #efeded;
  font-size: 10rem;
  z-index: -1;
} 

